--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Welcome
+---
+layout: default
+title: Home
+---
+<div class="blurb">
+ <h1>Kim Wheeler - About Me</h1>
+ <img src="/assets/images/launch.jpg" alt="Falcon Heavy" title="Falcon Heavy" />
+</div><!-- .blurb -->
